         Debugger:
          - Visual styles in Vista/7 increase rows height in ListView controls.
            Adjusted lists and dialog size to allocate 20 rows without scrolling
            (stack).
          - Disassembly list shows 20 rows in Vista/7, however shows 24 rows in
            2000/XP to use full height.
          - Fix partially visible T-states.
          - Fix scrolling in disassembly list (1 LINEUP/LINEDOWN), don't
            mismatch next OP if the top OP was 2 bytes.
          - Enabled ESC key to close the dialog.
         (patch #3201532) (Sergio Baldovi).
20110327 man/fuse.1,roms/{128p-[01].rom,256s-[0123].rom,Makefile.am,
         README.copyright,gluck.rom,if1-[12].rom,opus.rom,trdos.rom,
         Makefile.am}: remove ROMs that there is no formal permission to
         distribute.
20110327 roms/Makefile.am: distribute README.copyright.
20110328 configure.in: allow the user to say they do not want to use windres
         (works around bug #3248008; thanks, Cygnus).
20110401 peripherals/disk/{opus,plusd}.c: remove incorrect use of GCC_UNUSED
         (Stuart).
20110401 fuse.c,ui/{gtk/gtkui.c,widget/menu.c},windres.rc: update copyright
         dates (Stuart).
20110402 machines/{machines_periph.c,spec48_ntsc.c},peripherals/disk/crc.c,
         ui/gtk/fileselector.c,ui/{gtk,widget,win32}/options.pl,
         unittests/unittests.c: add missing #includes (Stuart).
20110402 peripherals/if1.c,ui/{gtk,widget,win32}/{options,options-header}.pl:
         add missing 'void' in K&R-style parameter lists (Stuart).
20110402 peripherals/{machines_periph.c,disk/disk.c},sound/blipbuffer.c:
         add 'static' to function definitions where appropriate (Stuart).
20110402 ui/{gtk,win32}/options.pl,utils.c: add const qualifiers (Stuart).
20110403 ui/win32/win32ui.c: implement Snap Joystick Prompt. Enable default
         button, ESC key and the ability to use arrow up/down to cycle (patch
         #3258533) (Sergio Baldovi).